Fixed Aizen's Code I Think