@@ -8,19 +8,19 @@ import org.openqa.selenium.remote.RemoteWebDriver;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.concurrent.TimeUnit;
 
 public class WinAppDriver {
-    public static void main(String[] args) {
+    private WinAppDriver() {}
+    public static void openApp(String executablePath, String remoteURI) throws InterruptedException {
         // Open cmd prompt
         try {
-            // Define the path to WinAppDriver.exe
-            String executablePath = "C:\\Program Files (x86)\\Windows Application Driver\\WinAppDriver.exe";
-
             // Command to run WinAppDriver.exe as an administrator
-            String command = "cmd.exe /c start cmd.exe /c \"" + executablePath + "\"";
-
+            // We use cmd.exe /c to execute the command and start cmd.exe /c to run the command in a new command prompt window
+            String[] command = {"cmd.exe", "/c", "start", "cmd.exe", "/c", "\"" + executablePath + "\""};
+            
             // Execute the command
             Runtime.getRuntime().exec(command);
         } catch (IOException e) {
@@ -36,7 +36,7 @@ public class WinAppDriver {
             capabilities.setCapability("app", "C:\\Windows\\System32\\notepad.exe");
 
             // Create a new instance of the RemoteWebDriver using the builder pattern
-            WebDriver driver = new RemoteWebDriver(new URL("http://127.0.0.1:4723"), capabilities);
+            WebDriver driver = new RemoteWebDriver(new URI(remoteURI).toURL(), capabilities);
 
             // Interact with the application
             WebElement edit = driver.findElement(By.className("Edit")); // Example: find the edit field by class name
@@ -68,11 +68,14 @@ public class WinAppDriver {
             driver.quit();
         } catch (MalformedURLException | URISyntaxException e) {
             e.printStackTrace();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+            throw new InterruptedException("Error while waiting for element.");
         }
     }
 
-    public static WebElement waitForElement(WebDriver driver, By locator, int timeoutInSeconds) {
-        long endTime = System.currentTimeMillis() + timeoutInSeconds * 1000;
+    public static WebElement waitForElement(WebDriver driver, By locator, int timeoutInSeconds) throws InterruptedException {
+        long endTime = System.currentTimeMillis() + timeoutInSeconds * 1000L;
         while (System.currentTimeMillis() < endTime) {
             try {
                 WebElement element = driver.findElement(locator);
@@ -86,8 +89,8 @@ public class WinAppDriver {
                 TimeUnit.MILLISECONDS.sleep(500); // Wait for 500 milliseconds before checking again
             } catch (InterruptedException e) {
                 e.printStackTrace();
+                throw new InterruptedException("Error while waiting for element.");
             }
         }
-        throw new RuntimeException("Element not found within the specified timeout.");
-    }
+        throw new InterruptedException("Element not found after " + timeoutInSeconds + " seconds (or smth like that).");}
 }
